# keon-sdk-python

./: .coverage  .gitignore  ASSURANCE_NOTES.md  README.md  RELEASE.md  SENTINELS.md  pyproject.toml
.github/workflows/: ci.yml
keon_sdk/: client.py  contracts.py  errors.py  gateway.py  http_gateway.py
keon_sdk/adapters/: ai.py
src/: __init__.py  canonicalize.py  contracts.py  retry.py
src/adapters/: __init__.py
src/keon_sdk/: __init__.py  _cli.py  evidence_pack.py  mcp_server.py  receipt.py  types.py  verify.py
tests/: __init__.py  test_canonicalize.py  test_correlation_id.py  test_evidence_pack.py  test_execute_requires_receipt.py  test_keon_sentinels.py  test_mcp_server.py  test_quickstart.py  test_receipt.py  test_verify.py
