[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keon-sdk"
version = "1.0.0"
description = "Keon Python SDK - Thin, safe-by-default client for Keon Runtime"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Keon Systems", email = "sdk@keon.systems" },
]
keywords = ["keon", "governance", "ai", "runtime", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "respx>=0.21.0",  # HTTP mocking for tests
]

[project.urls]
Homepage = "https://keon.systems"
Documentation = "https://docs.keon.systems/sdk/python"
Repository = "https://github.com/m0r6aN/keon"
Issues = "https://github.com/m0r6aN/keon/issues"

[tool.hatch.build.targets.wheel]
packages = ["keon_sdk"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=keon_sdk --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
markers = [
    "sentinel: architecture guard tests — enforce policy authority contract",
]

[tool.coverage.run]
source = ["keon_sdk"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
